@@ -46,6 +46,9 @@ Core and Builtins
 
 - Issue #83755:  Implicit set-to-frozenset conversion was not thread-safe.
 
+- Issue #10068: Global objects which have reference cycles with their module's
+  dict are now cleared again. This causes issue #7140 to appear again.
+
 - Issue #9416: Fix some issues with complex formatting where the
   output with no type specifier failed to match the str output:
 
